--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,10 @@ version: 2.1 # Use version 2.1 to enable Orb usage.
 
 jobs:
   build: 
+    branches:
+      only:
+        - craftbukkit
+        - /rc-.*/
     working_directory: ~/Akarin-project/AkarinForge
     parallelism: 1
     shell: /bin/bash --login
