--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,7 @@ version: 2.1 # Use version 2.1 to enable Orb usage.
 jobs:
   build: 
     branches:
-      only:
-        - craftbukkit
-        - /rc-.*/
+      only: craftbukkit
     working_directory: ~/Akarin-project/AkarinForge
     parallelism: 1
     shell: /bin/bash --login
