--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,11 @@ jobs:
     # Prepare for artifact
     - run: mkdir -p %CIRCLE_ARTIFACTS% %CIRCLE_TEST_REPORTS%
     # Dependencies
-  #  - run: mvn dependency:go-offline
+    - run: sudo apt update
+    - run: sudo apt upgrade
+    - run: sudo apt-get install maven
+    - run: sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java; sudo update-alternatives --set javac /usr/lib/jvm/java-8-openjdk-amd64/jdk/bin/javac; echo -e "export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64" >> $BASH_ENV
+    - run: mvn dependency:go-offline
     # Restore the dependency cache
     - restore_cache:
         keys:
@@ -33,9 +37,6 @@ jobs:
     - run: export TERM=${TERM:-dumb}
     - run: git config --global user.email "circle@circleci.com"
     - run: git config --global user.name "CircleCI"
-    - run: sudo apt update
-    - run: sudo apt upgrade
-    - run: sudo apt-get install maven
     - run: chmod -Rv +x scripts/
     - run: chmod -Rv +x work/MinecraftForge/
     - run: ./scripts/inst.sh --setup --setup
